# MineWebServer

./: CMakeLists.txt
src/: Server.cpp  Server.hpp
src/Modding/: ServerMod.cpp  ServerMod.hpp  ServerModManager.cpp  ServerModManager.hpp
src/Physics/: ServerPhysicsEngine.cpp  ServerPhysicsEngine.hpp  ServerPhysicsObject.cpp  ServerPhysicsObject.hpp
src/Protocol/: ClientSession.hpp  NetworkSettings.hpp  ServerPacket.hpp  ServerPacketHelper.hpp
src/Protocol/Packets/: AddMapObjectServer.hpp  ChatMessageServer.hpp  EditChunkServer.hpp  EntityActionServer.hpp  GenerateChunkServer.hpp  HandShakePacketServer.hpp  LightMapServer.hpp  NetworkSettingsPacket.hpp  PlayerAuthInputServer.hpp  RegisterModServer.hpp  TransferModServer.hpp
src/Utils/: Block.hpp  ByteBuf.hpp  HeightMap.hpp  PerlinNoise.hpp  ServerBlockRegistry.cpp  ServerBlockRegistry.hpp  ServerChunkMap.cpp  ServerChunkMap.hpp  ServerEntity.hpp  ServerGetAABB.hpp  StrSplit.hpp  Vec.hpp  ZLibUtils.hpp  ZipUtils.cpp  ZipUtils.hpp  vec3Comparator.hpp
src/WorldSaving/: RegionRegistory.hpp
src/WorldSaving/RegionFormat/: RegionFormat.hpp
src/WorldSaving/RegionFormat/impl/v1/: RegionFormat_V1.cpp  RegionFormat_V1.hpp
